# RocqThompsonsGroups

./: .gitignore  README.md  _CoqProject  rocq-thompsons-groups.opam
.github/workflows/: blueprint.yml
blueprint/src/: biblio.bib  content.tex  print.tex  web.tex
blueprint/src/macros/: common.tex  print.tex  web.tex
home_page/: _config.yml
home_page/_layouts/: default.html
theories/: Codes.v  JonssonTarski.v  PrefixOrder.v  codes.v
