opam-version: "2.0"
maintainer: "reinis.cirpons@inria.fr"
version: "dev"

homepage: "https://github.com/RocqThompsonsGroups"
dev-repo: "git+https://github.com/reiniscirpons/RocqThompsonsGroups.git"
bug-reports: "https://github.com/reiniscirpons/RocqThompsonsGroups/issues"
license: "CeCILL-B"

synopsis: "A formalization of the theory of Thompsons groups in Rocq"
description: """
This project aims to formalize the theory of Thompsons groups and monoids."""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "rocq-core" {>= "9.1.0"}
  "rocq-mathcomp-boot" {>= "2.5.0"}
]

authors: [
  "Reinis Cirpons"
  "Luna Elliott"
]
